# pinkponk

./: .gitignore  .package.resolved  .tmuxinator.yml  Project.swift  README.md  Tuist.swift  currently_watching_files.sh  devbox.json  justfile  pyproject.toml
Tuist/: Package.resolved  Package.swift
documentation/: icon.pxd
pinkponk/: ContentView.swift  pinkponkApp.swift
pinkponk.xcodeproj/: project.pbxproj
pinkponk.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
pinkponk/Resources/: ApplicationDatabase.sql
pinkponk/Sources/: ContentView.swift  PinkPonkApp.swift
pinkponk/Sources/Governor/: Governor.swift
pinkponk/Sources/Model/: ApplicationDatabase.swift  DatabaseConnection.swift
pinkponk/Sources/Repository/: ApplicationDatabase.swift  ReadwiseRepository.swift  Repository.swift
pinkponk/Tests/: tests.swift
pinkponk/db/: schema.sql  schema.sqlschema
pinkponk/repository/: ReadwiseRepository.swift
src/imperative_shell/: readwise.py
tests/: test_imperative_shell.py  tests.swift
